[RON-355] chore: update config files (#37)
* chore: update config files

* chore: remove unused variables

* chore: update contracts address

* chore: update contracts address

* chore: update EthGovernance address

--- a/config/config.devnet.json
+++ b/config/config.devnet.json
@@ -20,15 +20,15 @@
       "fromHeight": 8010875,
       "processWithinBlocks": 864000,
       "contracts": {
-        "Gateway": "0xCee681C9108c42C710c6A8A949307D5F13C9F3ca",
-        "EthGateway": "0xFc4319Ae9e6134C708b88D5Ad5Da1A4a83372502",
-        "EthGovernance": "0x456327e8961B3Cd20ea41fF8b4FcE80EA3A8A5C9",
-        "Governance": "0x61626ba084aDdc5dBFCdFfA257e66F8618d3feAB",
-        "TrustedOrganization": "0x642CBdc239Db60E488a917e34b833e541b623F7A"
+        "Gateway": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
+        "EthGateway": "0xb68cbBDd4C7b3e4e39C035Bd356FC5BDb7E2a50E",
+        "EthGovernance": "",
+        "Governance": "",
+        "TrustedOrganization": ""
       },
       "subscriptions": {
         "MainchainWithdrewSubscription": {
-          "to": "0xCee681C9108c42C710c6A8A949307D5F13C9F3ca",
+          "to": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
           "type": 1,
           "handler": {
             "contract": "RoninGateway",
@@ -39,7 +39,7 @@
           }
         },
         "WithdrawalRequestedSubscription": {
-          "to": "0xCee681C9108c42C710c6A8A949307D5F13C9F3ca",
+          "to": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
           "type": 1,
           "handler": {
             "contract": "RoninGateway",
@@ -50,7 +50,7 @@
           }
         },
         "WithdrawalSignaturesRequestedSubscription": {
-          "to": "0xCee681C9108c42C710c6A8A949307D5F13C9F3ca",
+          "to": "0xA8D61A5427a778be28Bd9bb5990956b33385c738",
           "type": 1,
           "handler": {
             "contract": "RoninGateway",
@@ -61,7 +61,7 @@
           }
         },
         "BridgeOperatorSetUpdatedSubscription": {
-          "to": "0x79D77b973aF4C896552240521C6a421C88f159EF",
+          "to": "",
           "type": 1,
           "handler": {
             "contract": "RoninValidator",
@@ -72,7 +72,7 @@
           }
         },
         "BridgeOperatorsApprovedSubscription": {
-          "to": "0x61626ba084aDdc5dBFCdFfA257e66F8618d3feAB",
+          "to": "",
           "type": 1,
           "handler": {
             "contract": "RoninGovernanceAdmin",
@@ -102,11 +102,11 @@
       "fromHeight": 12522064,
       "processWithinBlocks": 198720,
       "contracts": {
-        "Gateway": "0xCee681C9108c42C710c6A8A949307D5F13C9F3ca"
+        "Gateway": "0xA8D61A5427a778be28Bd9bb5990956b33385c738"
       },
       "subscriptions": {
         "DepositRequestedSubscription": {
-          "to": "0xFc4319Ae9e6134C708b88D5Ad5Da1A4a83372502",
+          "to": "0xb68cbBDd4C7b3e4e39C035Bd356FC5BDb7E2a50E",
           "type": 1,
           "handler": {
             "contract": "EthereumGateway",
@@ -117,7 +117,7 @@
           }
         },
         "WithdrewSubscription": {
-          "to": "0xFc4319Ae9e6134C708b88D5Ad5Da1A4a83372502",
+          "to": "0xb68cbBDd4C7b3e4e39C035Bd356FC5BDb7E2a50E",
           "type": 1,
           "handler": {
             "contract": "EthereumGateway",
