--- a/config/config.testnet.json
+++ b/config/config.testnet.json
@@ -13,6 +13,9 @@
         "validator": {
           "plainPrivateKey": ""
         },
+        "voter": {
+          "plainPrivateKey": ""
+        },
         "relayer": {
           "plainPrivateKey": ""
         }
