--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ env:
   IMAGE_REPOSITORY: axieinfinity/bridge
   DOCKER_FILE: Dockerfile
 jobs:
-  push_to_dockerhub:
+  push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     permissions:
