feat: allow to bump the gas limit higher than returned from estimate gas
This commit allows to configure the ratio to bump the gas limit higher than
returned value from estimate gas to reduce the out of gas transactions. It
creates a new environment variable GAS_LIMIT_BUMP_RATIO for configuration.

--- a/config/config.mainnet.json
+++ b/config/config.mainnet.json
@@ -9,6 +9,7 @@
       "minTasksQuery": 50,
       "taskInterval": 10,
       "transactionCheckPeriod": 50,
+      "gasLimitBumpRatio": 200,
       "secret": {
         "bridgeOperator": {
           "plainPrivateKey": ""
