--- a/config/config.testnet.json
+++ b/config/config.testnet.json
@@ -25,10 +25,7 @@
       "processWithinBlocks": 864000,
       "contracts": {
         "Gateway": "0xCee681C9108c42C710c6A8A949307D5F13C9F3ca",
-        "EthGateway": "0xde78AcB426e24074674af9C03cA595037613388B",
-        "EthGovernance": "0xF0287c547947d4316B68CfbAfa8668bB54a277b8",
-        "Governance": "0x53Ea388CB72081A3a397114a43741e7987815896",
-        "TrustedOrganization": "0x7507dc433a98E1fE105d69f19f3B40E4315A4F32"
+        "EthGateway": "0x9e359F42cDDc84A386a2Ef1D9Ae06623f3970D1D"
       },
       "subscriptions": {
         "MainchainWithdrewSubscription": {
@@ -63,28 +60,6 @@
           "callbacks": {
             "Ronin": "ProvideReceiptSignatureAgainCallback"
           }
-        },
-        "BridgeOperatorSetUpdatedSubscription": {
-          "to": "0x54B3AC74a90E64E8dDE60671b6fE8F8DDf18eC9d",
-          "type": 1,
-          "handler": {
-            "contract": "RoninValidator",
-            "name": "BridgeOperatorSetUpdated"
-          },
-          "callbacks": {
-            "Ronin": "BridgeOperatorSetUpdatedCallback"
-          }
-        },
-        "BridgeOperatorsApprovedSubscription": {
-          "to": "0x53Ea388CB72081A3a397114a43741e7987815896",
-          "type": 1,
-          "handler": {
-            "contract": "RoninGovernanceAdmin",
-            "name": "BridgeOperatorsApproved"
-          },
-          "callbacks": {
-            "Ronin": "BridgeOperatorsApprovedCallback"
-          }
         }
       }
     },
@@ -106,11 +81,11 @@
       "fromHeight": 12522064,
       "processWithinBlocks": 198720,
       "contracts": {
-        "Gateway": "0xde78AcB426e24074674af9C03cA595037613388B"
+        "Gateway": "0x9e359F42cDDc84A386a2Ef1D9Ae06623f3970D1D"
       },
       "subscriptions": {
         "DepositRequestedSubscription": {
-          "to": "0xde78AcB426e24074674af9C03cA595037613388B",
+          "to": "0x9e359F42cDDc84A386a2Ef1D9Ae06623f3970D1D",
           "type": 1,
           "handler": {
             "contract": "EthereumGateway",
@@ -121,7 +96,7 @@
           }
         },
         "WithdrewSubscription": {
-          "to": "0xde78AcB426e24074674af9C03cA595037613388B",
+          "to": "0x9e359F42cDDc84A386a2Ef1D9Ae06623f3970D1D",
           "type": 1,
           "handler": {
             "contract": "EthereumGateway",
